Mise à jour de la page d'acceuil

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -15,23 +15,23 @@
         <div class="slides">
             <div class="slide slide-1">
                 <div class="slide-data">
-                    <h1>Title 1</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio porro sit ullam.</p>
-                    <a class="btn" href="#">read more <i class="fas fa-plus"></i></a>
+                    <h1></h1>
+                    <p></p>
+                    <a class="btn" href="#">S'inscrire <i class="fas fa-pencil"></i></a>
                 </div>
             </div>
             <div class="slide slide-2">
                 <div class="slide-data">
-                    <h1>Title 2</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio porro sit ullam.</p>
-                    <a class="btn" href="#">read more <i class="fas fa-plus"></i></a>
+                    <h1></h1>
+                    <p></p>
+                    <a class="btn" href="#">S'inscrire <i class="fas fa-pencil"></i></a>
                 </div>
             </div>
             <div class="slide slide-3">
                 <div class="slide-data">
-                    <h1>Title 3</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio porro sit ullam.</p>
-                    <a class="btn" href="#">read more <i class="fas fa-plus"></i></a>
+                    <h1></h1>
+                    <p></p>
+                    <a class="btn" href="#">S'inscrire <i class="fas fa-pencil"></i></a>
                 </div>
             </div>
         </div>
@@ -53,154 +53,170 @@
         </div>
     </section>
     <section class="wrapper">
-        <h2 class="box-title">Title parts</h2>
+        <h2 class="box-title">Structuration des Thématiques</h2>
         <div class="box-container">
 
             <div class="box">
                 <i class="fa-solid fa-heart"></i>
-                <h3>Objectif</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquam animi assumenda at atque autem corporis debitis deserunt, dignissimos ea eius fugit id iusto magnam maxime molestias neque nesciunt nihil odit officiis provident quidem quisquam reprehenderit sed tempore, temporibus voluptates! Amet eos pariatur praesentium repudiandae voluptatem. Consectetur consequuntur magnam quos.</p>
-                <a href="#" class="btn">Read More ...</a>
-            </div>
-            <div class="box">
-                <i class="fa-solid fa-heart"></i>
-                <h3>Objectif</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquam animi assumenda at atque autem corporis debitis deserunt, dignissimos ea eius fugit id iusto magnam maxime molestias neque nesciunt nihil odit officiis provident quidem quisquam reprehenderit sed tempore, temporibus voluptates! Amet eos pariatur praesentium repudiandae voluptatem. Consectetur consequuntur magnam quos.</p>
-                <a href="#" class="btn">Read More ...</a>
-            </div>
-            <div class="box">
-                <i class="fa-solid fa-heart"></i>
-                <h3>Objectif</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquam animi assumenda at atque autem corporis debitis deserunt, dignissimos ea eius fugit id iusto magnam maxime molestias neque nesciunt nihil odit officiis provident quidem quisquam reprehenderit sed tempore, temporibus voluptates! Amet eos pariatur praesentium repudiandae voluptatem. Consectetur consequuntur magnam quos.</p>
-                <a href="#" class="btn">Read More ...</a>
-            </div>
-            <div class="box">
-                <i class="fa-solid fa-heart"></i>
-                <h3>Objectif</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquam animi assumenda at atque autem corporis debitis deserunt, dignissimos ea eius fugit id iusto magnam maxime molestias neque nesciunt nihil odit officiis provident quidem quisquam reprehenderit sed tempore, temporibus voluptates! Amet eos pariatur praesentium repudiandae voluptatem. Consectetur consequuntur magnam quos.</p>
-                <a href="#" class="btn">Read More ...</a>
-            </div>
-            <div class="box">
-                <i class="fa-solid fa-heart"></i>
-                <h3>Objectif</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquam animi assumenda at atque autem corporis debitis deserunt, dignissimos ea eius fugit id iusto magnam maxime molestias neque nesciunt nihil odit officiis provident quidem quisquam reprehenderit sed tempore, temporibus voluptates! Amet eos pariatur praesentium repudiandae voluptatem. Consectetur consequuntur magnam quos.</p>
-                <a href="#" class="btn">Read More ...</a>
-            </div>
-            <div class="box">
-                <i class="fa-solid fa-heart"></i>
-                <h3>Objectif</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquam animi assumenda at atque autem corporis debitis deserunt, dignissimos ea eius fugit id iusto magnam maxime molestias neque nesciunt nihil odit officiis provident quidem quisquam reprehenderit sed tempore, temporibus voluptates! Amet eos pariatur praesentium repudiandae voluptatem. Consectetur consequuntur magnam quos.</p>
-                <a href="#" class="btn">Read More ...</a>
-            </div>
+                <h3>Agriculture, élevage et pêche</h3>
 
+                <a href="#" class="btn">Read More ...</a>
+            </div>
+            <div class="box">
+                <i class="fa-solid fa-heart"></i>
+                <h3>Bonne gouvernance </h3>
+
+                <a href="#" class="btn">Read More ...</a>
+            </div>
+            <div class="box">
+                <i class="fa-solid fa-heart"></i>
+                <h3>Décentralisation</h3>
+                <a href="#" class="btn">Read More ...</a>
+            </div>
+            <div class="box">
+                <i class="fa-solid fa-heart"></i>
+                <h3>Droits humains, Genre et Équité </h3>
+                <a href="#" class="btn">Read More ...</a>
+            </div>
+            <div class="box">
+                <i class="fa-solid fa-heart"></i>
+                <h3>Éducation, formation professionnelle et alphabétisation </h3>
+                <a href="#" class="btn">Read More ...</a>
+            </div>
+            <div class="box">
+                <i class="fa-solid fa-heart"></i>
+                <h3>Emploi et entreprenariat </h3>
+
+                <a href="#" class="btn">Read More ...</a>
+            </div>
+            <div class="box">
+                <i class="fa-solid fa-heart"></i>
+                <h3>Environnement, changement climatique et gestion des catastrophes et humanitaire </h3>
+
+                <a href="#" class="btn">Read More ...</a>
+            </div>
+            <div class="box">
+                <i class="fa-solid fa-heart"></i>
+                <h3>Renforcement des capacités </h3>
+
+                <a href="#" class="btn">Read More ...</a>
+            </div>
+            <div class="box">
+                <i class="fa-solid fa-heart"></i>
+                <h3>Renforcement des capacités </h3>
+
+                <a href="#" class="btn">Read More ...</a>
+            </div>
         </div>
 
     </section>
     <section class="parallax">
         <div class="parallax-data">
-            <h2>Text content</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, aspernatur aut consequatur delectus, enim est ipsum non obcaecati possimus repellendus reprehenderit sint tempora voluptatum? A accusamus aspernatur, at cumque delectus doloribus eos eum ex facere fuga fugit iure magni nam nostrum obcaecati provident quaerat quidem quis reiciendis sed tempora temporibus tenetur voluptatum? Adipisci aliquam aperiam, assumenda deleniti ducimus ea earum eveniet explicabo facere fugiat fugit harum hic modi, neque nostrum obcaecati officia recusandae rerum sed suscipit, vel voluptas voluptatum. Ab delectus deleniti dolores eligendi est expedita inventore ipsa libero magnam maiores minima praesentium, provident quas repudiandae rerum sapiente, ullam vero.</p>
+            <h2 style="color: red">Présentation de UONGTO</h2>
+            <p>Fondée en 1993, l’Union des ONG du Togo (UONGTO) est une faitière apolitique et à but non lucratif qui vise à coordonner les actions entre ses membres et à promouvoir le partenariat entre ceux-ci et les organisations nationales et internationales de développement. <br/> Les activités de la faîtière sont: (i) la coordination, la planification, la mise en œuvre  et le suivi-évaluation des projets/programmes d’envergure nationale et régionale (ii) la représentation des membres auprès des pouvoirs publics et des partenaires internationaux ,(iii)le renforcement  des capacités via un appui institutionnel, technique et organisationnel et la promotion du partenariat entre ses membres, les organisations nationales et les organisations internationales de développement , (v) le   lobbying et de plaidoyer pour l’émergence d’une société civile forte pouvant influencer les politiques publiques. L’UONGTO, qui a vocation à promouvoir le dialogue politique, économique, social et culturel, œuvre pour une participation efficiente des ONG à la formulation, à la gouvernance, à l’audit social et au suivi-évaluation des politiques publiques.
+            </p>
         </div>
 
     </section>
     <section class="carousel-section">
+        <h2 style="color: red">Quelques personalités qui partageront leur modèles éconnomiques à l'atelier de capitalisation</h2>
         <div class="slider-cards owl-carousel">
             <div class="card">
                 <div class="img"><img src="{{ asset('assets/img/atelier-1.jpg') }}" alt=""></div>
                 <div class="content">
-                    <div class="title">Briana Tozour</div>
-                    <div class="sub-title">Graphic Designer</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit modi dolorem quis quae animi nihil minus sed unde voluptas cumque.</p>
+                    <div class="title">AKPA Komi</div>
+                    <div class="sub-title">PCA - UONGTO</div>
+                    <pDirecteur exécutif de l'ONG PASYD></p>
                     <div class="btn">
-                        <button>Read more</button>
+                        <button>Lire + </button>
                     </div>
                 </div>
             </div>
             <div class="card">
                 <div class="img"><img src="{{ asset('assets/img/atelier-2.jpg') }}" alt=""></div>
                 <div class="content">
-                    <div class="title">Pricilla Preez</div>
-                    <div class="sub-title">Web Developer</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit modi dolorem quis quae animi nihil minus sed unde voluptas cumque.</p>
+                    <div class="title">ALASSAN Kpèziwèzou</div>
+                    <div class="sub-title">Président Fondateur de l'ONG AJA</div>
+                    <p>Directeur du CFIJ - Togo</p>
                     <div class="btn">
-                        <button>Read more</button>
+                        <button>Lire + </button>
                     </div>
                 </div>
             </div>
             <div class="card">
                 <div class="img"><img src="{{ asset('assets/img/atelier-3.jpg') }}" alt=""></div>
                 <div class="content">
-                    <div class="title">Eliana Maia</div>
-                    <div class="sub-title">App Developer</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit modi dolorem quis quae animi nihil minus sed unde voluptas cumque.</p>
+                    <div class="title">BATCHALE Agouda</div>
+                    <div class="sub-title">Directeur de l'ONG PADES</div>
+                    <p>Promotteur CIAR - SAL</p>
                     <div class="btn">
-                        <button>Read more</button>
+                        <button>Lire +</button>
                     </div>
                 </div>
             </div>
             <div class="card">
                 <div class="img"><img src="{{ asset('assets/img/atelier-4.jpg') }}" alt=""></div>
                 <div class="content">
-                    <div class="title">Eliana Maia</div>
-                    <div class="sub-title">App Developer</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit modi dolorem quis quae animi nihil minus sed unde voluptas cumque.</p>
+                    <div class="title">BEMAH Gado</div>
+                    <div class="sub-title">SG UONGTO</div>
+                    <p>Directeur Exécutif de l'ONG STADD <br> Promoteur de GIP - TOGO</p>
                     <div class="btn">
-                        <button>Read more</button>
+                        <button>Lire +</button>
                     </div>
                 </div>
             </div>
             <div class="card">
                 <div class="img"><img src="{{ asset('assets/img/atelier-9.jpg') }}" alt=""></div>
                 <div class="content">
-                    <div class="title">Eliana Maia</div>
-                    <div class="sub-title">App Developer</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit modi dolorem quis quae animi nihil minus sed unde voluptas cumque.</p>
+                    <div class="title">YATOMBO</div>
+                    <div class="sub-title">Directeur Exécutif de l'ONG GEVAPAF</div>
+                    <p></p>
                     <div class="btn">
-                        <button>Read more</button>
+                        <button>Lire + </button>
                     </div>
                 </div>
             </div>
             <div class="card">
                 <div class="img"><img src="{{ asset('assets/img/atelier-8.jpg') }}" alt=""></div>
                 <div class="content">
-                    <div class="title">Eliana Maia</div>
-                    <div class="sub-title">App Developer</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit modi dolorem quis quae animi nihil minus sed unde voluptas cumque.</p>
+                    <div class="title">WILSON Anani Akpé</div>
+                    <div class="sub-title">Président Fondateur de l'ECOMUSEE GUIN DOUA D'Aneho</div>
+                    <p>Directeur Exécutif de l'ONG AVOTODE</p>
                     <div class="btn">
-                        <button>Read more</button>
+                        <button>Lire +</button>
                     </div>
                 </div>
             </div>
             <div class="card">
                 <div class="img"><img src="{{ asset('assets/img/atelier-5.jpg') }}" alt=""></div>
                 <div class="content">
-                    <div class="title">Eliana Maia</div>
-                    <div class="sub-title">App Developer</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit modi dolorem quis quae animi nihil minus sed unde voluptas cumque.</p>
+                    <div class="title">KOLANI Beithien</div>
+                    <div class="sub-title">Directeur Exécutil de l'ONG Code Utile Afrique</div>
+                    <p></p>
                     <div class="btn">
-                        <button>Read more</button>
+                        <button>Lire +</button>
                     </div>
                 </div>
             </div>
             <div class="card">
                 <div class="img"><img src="{{ asset('assets/img/atelier-6.jpg') }}" alt=""></div>
                 <div class="content">
-                    <div class="title">Eliana Maia</div>
-                    <div class="sub-title">App Developer</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit modi dolorem quis quae animi nihil minus sed unde voluptas cumque.</p>
+                    <div class="title">DATAGNI Nadzombé</div>
+                    <div class="sub-title">Directeur Exécutif de l'ONG ADESCO</div>
+                    <p>Promoteur du CMS Bon Secours à Sokodé</p>
                     <div class="btn">
-                        <button>Read more</button>
+                        <button>Lire +</button>
                     </div>
                 </div>
             </div>
             <div class="card">
                 <div class="img"><img src="{{ asset('assets/img/atelier-7.jpg') }}" alt=""></div>
                 <div class="content">
-                    <div class="title">Eliana Maia</div>
-                    <div class="sub-title">App Developer</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit modi dolorem quis quae animi nihil minus sed unde voluptas cumque.</p>
+                    <div class="title">BATIYENKPENI Nametougli</div>
+                    <div class="sub-title">Directeur Exécutif de l'ONG AREJ</div>
+                    <p></p>
                     <div class="btn">
-                        <button>Read more</button>
+                        <button>Lire +</button>
                     </div>
                 </div>
             </div>
