--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -262,6 +262,7 @@ header label{
 .box-container{
     display: grid;
     gap: 15px;
+    alignment-baseline: center;
     grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
 
 }
@@ -310,19 +311,19 @@ header label{
     justify-content: center;
     font-weight: bold;
     width: 100%;
-    height: 60vh;
+    height: 80vh;
     background-image: url("../img/slide-02.jpg");
     background-attachment: fixed;
     background-size: cover;
     color: #e0e0e0;
-    font-size: 26px;
+    font-size: 20px;
 }
 
 .parallax::before{
     content: "";
     position: absolute;
     width: 100%;
-    height: 60vh;
+    height: 80vh;
     background-color: rgba(0, 0, 0, 0.8);
 }
 
@@ -334,6 +335,13 @@ header label{
 
 .parallax-data h2{
     text-align: center;
+    color: red;
+}
+
+.parallax-data p {
+    margin: 5px;
+    text-align: center;
+    text-transform: none;
 }
 
 .carousel-section{
@@ -343,6 +351,9 @@ header label{
     text-align: center;
     background: #f2f2f2;
     padding-top: 50px;
+}
+.carousel-section h2{
+    margin-bottom: 12px ;
 }
 
 .slider-cards{
@@ -365,6 +376,7 @@ header label{
 }
 .slider-cards .card .content{
     padding: 10px 20px;
+    height: 197px;
 }
 .card .content .title{
     font-size: 25px;
@@ -377,11 +389,11 @@ header label{
     line-height: 20px;
 }
 .card .content p{
-    text-align: justify;
+    text-align: center;
     margin: 10px 0;
 }
 .card .content .btn{
-    display: block;
+    display: inline-block;
     text-align: left;
     margin: 10px 0;
 }
@@ -552,7 +564,10 @@ footer{
 }
 /*MEDIA QUERIES*/
 
-@media (max-width: 991px) {
+@media (max-width: 1140px) {
+    body {
+        overflow-x: hidden;
+    }
     /*HEADER*/
     header{
         padding: 10px;
@@ -600,6 +615,10 @@ footer{
     .parallax:before{
         height: 80vh;
     }
+
+    .carousel-section{
+        width: auto;
+    }
     footer{
         position: static;
     }
@@ -611,5 +630,15 @@ footer{
     }
     .footer-distributed .footer-center i {
         margin-left: 0;
+    }
+}
+@media (max-width: 700px) {
+    .parallax{
+        font-size: 14px;
+        height: 120vh;
+    }
+
+    .parallax:before{
+        height: 120vh;
     }
 }
