--- a/templates/_partials/_adminNavBar.html.twig
+++ b/templates/_partials/_adminNavBar.html.twig
@@ -13,6 +13,14 @@
         <div class="navbar-container content">
             <div class="collapse navbar-collapse" id="navbar-mobile">
                 <ul class="nav navbar-nav mr-auto float-left">
+                    <li class="nav-item d-none d-md-block"><a class="nav-link nav-menu-main menu-toggle hidden-xs" href="#"><i class="ft-menu"></i></a></li>
+                    <li class="nav-item nav-search"><a class="nav-link nav-link-search" href="#"><i class="ficon ft-search"></i></a>
+                        <div class="search-input">
+                            <input class="input" type="text" placeholder="Explore Modern..." tabindex="0" data-search="template-list">
+                            <div class="search-input-close"><i class="ft-x"></i></div>
+                            <ul class="search-list"></ul>
+                        </div>
+                    </li>
                 </ul>
                 <ul class="nav navbar-nav float-right">
                     <li class="dropdown dropdown-user nav-item">
